--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "endOfLine": "lf",
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "arrowParens": "always",
-  "trailingComma": "es5"
+  "trailingComma": "all"
 }
