--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "sync": "yarn babel-node scripts/sync",
     "test": "yarn babel-node scripts/test",
     "format": "yarn babel-node scripts/format",
-    "install:practice:all": "for directory in exercises/practice/*/; do yarn --cwd \"${directory}\"; done"
+    "install:practice:all": "for directory in exercises/practice/*/; do yarn --cwd \"${directory}\"; done",
+    "next-exercise": "node scripts/random-exercise.js"
   },
   "dependencies": {}
 }
